# education_system

./: .env.example  Readme.md  pyproject.toml
src/config/: settings.py  urls.py
src/config/components/: application_definition.py  database.py  drf.py  exception_handler.py
src/education/: admin.py  exceptions.py  models.py  serializers.py  urls.py
src/education/api/v1/: urls.py  views.py
src/education/migrations/: 0001_initial.py  0002_group_usergroup_userproduct.py
src/education/schemas/: product.py
