[tool.poetry]
name = "test-task"
version = "0.1.0"
description = ""
authors = ["egor nikitin <eanikitin90gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.2"
pydantic = "^2.6.3"
pydantic-settings = "^2.2.1"
django-split-settings = "^1.2.0"
djangorestframework = "^3.14.0"
drf-spectacular = "^0.27.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
